==> nam111kn/STM32CubeN6/Projects/STM32N6570-DK/Applications/ROT/OEMuROT_Boot/Src/low_level_rng.c <==
/**
  ******************************************************************************
  * @file    low_level_rng.c
  * @author  MCD Application Team
  * @brief   Low Level Interface module to use STM32 RNG Ip
  *          This file provides mbed-crypto random generataor
  *
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2024 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the LICENSE file
  * in the root directory of this software component.
  * If no LICENSE file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */
#include "stm32n6xx_hal.h"
#include "low_level_rng.h"

extern void Error_Handler(void);

static RNG_HandleTypeDef handle = {.Instance = RNG};
static uint8_t users = 0;

#define COMPILER_BARRIER() __ASM __IO("" : : : "memory")

/**
  * @brief Atomically increments an 8-bit unsigned integer by a specified delta.
  *
  * This function uses atomic operations to safely increment an 8-bit unsigned integer
  * in a multi-threaded environment. It ensures that the increment operation is performed
  * without interruption, preventing race conditions.
  *
  * @param valuePtr Pointer to the 8-bit unsigned integer to be incremented.
  * @param delta The value to increment by.
  * @return The new value after the increment.
  */
static uint8_t atomic_incr_u8(__IO uint8_t *valuePtr, uint8_t delta)
{
  COMPILER_BARRIER();
  uint8_t newValue;
  do
  {
    newValue = __LDREXB(valuePtr) + delta;
  } while (__STREXB(newValue, valuePtr));
  COMPILER_BARRIER();
  return newValue;
}

/**
  * @brief Initializes the Random Number Generator (RNG) peripheral.
  *
  * This function initializes the RNG peripheral, ensuring that only a single user
  * can access it at a time. It enables the RNG clock, sets up the RNG instance,
  * and discards the first random number generated.
  */
void RNG_Init(void)
{
  uint32_t dummy;
  /*  We're only supporting a single user of RNG */
  if (atomic_incr_u8(&users, 1) > 1)
  {
    Error_Handler();
  }

  /* RNG Peripheral clock enable */
  __HAL_RCC_RNG_CLK_ENABLE();

  /* Initialize RNG instance */
  handle.State = HAL_RNG_STATE_RESET;
  handle.Lock = HAL_UNLOCKED;

  if (HAL_RNG_Init(&handle) != HAL_OK)
  {
    Error_Handler();
  }

  /* First random number generated after setting the RNGEN bit should not be used */
  HAL_RNG_GenerateRandomNumber(&handle, &dummy);
}

/**
  * @brief Generates a specified number of random bytes.
  *
  * This function generates random bytes using the RNG peripheral and stores them
  * in the provided output buffer. It ensures that the requested number of bytes
  * is generated, handling retries if random numbers are not immediately available.
  *
  * @param output Pointer to the buffer where the random bytes will be stored.
  * @param length The number of random bytes to generate.
  * @param output_length Pointer to a variable where the actual number of generated bytes will be stored.
  */
void RNG_GetBytes(uint8_t *output, size_t length, size_t *output_length)
{
  int32_t ret = 0;
  uint8_t try = 0;
  __IO uint8_t random[4];
  *output_length = 0;

  /* Get Random byte */
  while ((*output_length < length) && (ret == 0))
  {
    if (HAL_RNG_GenerateRandomNumber(&handle, (uint32_t *)random) != HAL_OK)
    {
      /* retry when random number generated are not immediately available */
      if (try < 3)
      {
        try++;
      }
      else
      {
        ret = -1;
      }
    }
    else
    {
      for (uint8_t i = 0; (i < 4) && (*output_length < length) ; i++)
      {
        *output++ = random[i];
        *output_length += 1;
        random[i] = 0;
      }
    }
  }
  /* Just be extra sure that we didn't do it wrong */
  if ((__HAL_RNG_GET_FLAG(&handle, (RNG_FLAG_CECS | RNG_FLAG_SECS))) != 0)
  {
    *output_length = 0;
  }
}

/**
 * @brief Deinitializes the Random Number Generator (RNG) peripheral.
 *
 * This function deinitializes the RNG peripheral, disables its clock, and resets
 * the user count, assuming that this function is the only user of the RNG.
 */
void RNG_DeInit(void)
{
  /*Disable the RNG peripheral */
  HAL_RNG_DeInit(&handle);
  /* RNG Peripheral clock disable - assume we're the only users of RNG  */
  __HAL_RCC_RNG_CLK_DISABLE();

  users = 0;
}
